maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:18: error: '{' expected but '}' found.
  }
  ^ShortestPathMaze:24: error: illegal start of simple expression
  val y : Int =
  ^